# dawn-engine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  actor-design.txt  appveyor.yml  draftapi.txt  script_idea.lua  test-net.sh
Source/Dawn/: CMakeLists.txt  Common.h  DawnEngine.h  Engine.cpp  Engine.h  EventSystem.cpp  EventSystem.h  Platform.h  Prerequisites.h  StateManager.cpp  StateManager.h
Source/Dawn/Audio/: Audio.cpp  Audio.h  Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  Source.cpp  Source.h  Track.cpp  Track.h
Source/Dawn/Core/: Config.cpp  Config.h  ConfigNode.cpp  ConfigNode.h  ConfigNode.inl  FixedMemoryPool.h  Log.cpp  Log.h  Singleton.h  Utils.cpp  Utils.h
Source/Dawn/Graphics/: OSXGetNSView.h  OSXGetNSView.mm  RenderSystem.h  SpriteManager.cpp  SpriteManager.h
Source/Dawn/Input/: Input.cpp  Input.h  InputManager.cpp  InputManager.h
Source/Dawn/Math/: MathDefs.h  Rect.cpp  Vec2i.cpp  Vec2i.h  Vec3i.cpp  Vec3i.h
Source/Dawn/Physics/: PhysicsManager.cpp  PhysicsManager.h  PhysicsWorld.cpp  PhysicsWorld.h
Source/Dawn/Renderer/: GeometryUtils.cpp  GeometryUtils.h  RenderSystem.cpp  Renderer.cpp  Renderer.h  SpriteManager.cpp  SpriteManager.h
Source/Dawn/Scene/: Camera.cpp  Camera.h  DefaultCamera.cpp  DefaultCamera.h  Entity.cpp  Entity.h  Position.cpp  Position.h  RigidEntity.cpp  RigidEntity.h  SceneManager.cpp  SceneManager.h
Source/Dawn/Script/: LuaState.cpp  LuaState.h
Source/Dawn/UI/: Console.cpp  Console.h  ImGuiInterface.cpp  ImGuiInterface.h  InterfaceManager.cpp  InterfaceManager.h  Layout.cpp  Layout.h  RocketInterface.cpp  RocketInterface.h  UI.cpp  UI.h
Source/Sandbox/: CMakeLists.txt  Main.cpp  SandboxState.cpp  SandboxState.h
src/: CMakeLists.txt
src/contrib/: CMakeLists.txt  README.md
src/contrib/enet/: peer.c  protocol.c  win32.c
src/dawn/: Base.h  CMakeLists.txt  Common.h  Core.h  DawnEngine.h  Engine.cpp  Engine.h  EventSystem.cpp  EventSystem.h  Input.h  Net.h  Platform.h  Prerequisites.h  Renderer.h  Resource.h  Scene.h  Script.h  StateManager.cpp  StateManager.h  UI.h
src/dawn/Audio/: Track.cpp
src/dawn/Core/: Config.h  FixedMemoryPool.h  Utils.h
src/dawn/Math/: Rect.h  Vec4i.h
src/dawn/Renderer/: Renderer.cpp
src/dawn/Scene/: DefaultCamera.cpp  Position.h  RigidEntity.h  SceneManager.h
src/dawn/UI/: Layout.h  RocketInterface.h  UI.h
src/dawn/audio/: Audio.cpp  Audio.h  Sound.cpp  Sound.h  Source.cpp  Track.cpp  Track.h
src/dawn/core/: App.cpp  App.h  BaseTypes.h  Collections.h  CommandLine.cpp  CommandLine.h  Concurrency.cpp  Concurrency.h  Config.cpp  Config.h  ConfigNode.cpp  ConfigNode.h  ConfigNode.inl  Context.cpp  Context.h  Delegate.h  Engine.cpp  Engine.h  EventData.h  EventSystem.cpp  EventSystem.h  Exception.h  FixedMemoryPool.h  GameMode.cpp  GameMode.h  GameSession.cpp  GameSession.h  Handle.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Module.cpp  Module.h  Object.cpp  Object.h  Option.h  Position.cpp  Position.h  Preprocessor.h  (+14 more)
src/dawn/ecs/: Component.cpp  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h
src/dawn/engine/: App.cpp  App.h  Config.cpp  Config.h  ConfigNode.cpp  ConfigNode.h  ConfigNode.i.h  ConfigNode.inl  Engine.cpp  Engine.h
src/dawn/gameplay/: GameFramework.cpp  GameFramework.h  GameMode.cpp  GameMode.h  GameSession.cpp  GameSession.h  GameplayModule.cpp  GameplayModule.h
src/dawn/input/: Input.cpp  Input.h
src/dawn/io/: File.cpp  File.h  FileSystem.cpp  FileSystem.h  InputStream.cpp  InputStream.h  OutputStream.cpp  OutputStream.h  Path.cpp  Path.h  StringInputStream.cpp  StringInputStream.h
src/dawn/math/: Colour.cpp  Colour.h  Defs.h  MathDefs.h  MathGeoLib.h  Noise.cpp  Noise.h  Rect.cpp  Rect.h  StringHash.cpp  StringHash.h  Vec2i.cpp  Vec2i.h  Vec3i.cpp  Vec3i.h  Vec4i.cpp  Vec4i.h
src/dawn/net/: BitStream.cpp  BitStream.h  CNetData.cpp  CNetData.h  CNetTransform.cpp  CNetTransform.h  NetData.cpp  NetData.h  NetEntityPipeline.cpp  NetEntityPipeline.h  NetGameMode.cpp  NetGameMode.h  NetInstance.cpp  NetInstance.h  NetMode.h  NetRole.h  NetSystem.cpp  NetSystem.h  NetTransform.cpp  NetTransform.h  Networking.cpp  Networking.h  RepProperty.h  RepProperty.i.h  Rpc.cpp  Rpc.h  Rpc.i.h  Yojimbo.h
src/dawn/physics/: BulletDynamics.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h
src/dawn/platform/: Defines.h  Entry.cpp  Entry.h  Thread.cpp  Thread.h  Windows.h
src/dawn/renderer/: Bgfx.h  BillboardSet.cpp  BillboardSet.h  CCamera.cpp  CCamera.h  Camera.cpp  Camera.h  CustomMesh.cpp  CustomMesh.h  CustomMeshRenderable.cpp  CustomMeshRenderable.h  CustomRenderable.cpp  CustomRenderable.h  EntityRenderer.cpp  EntityRenderer.h  FrameBuffer.cpp  FrameBuffer.h  GLFW.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLProgram.cpp  GLProgram.h  GLSL.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexBuffer.cpp  GLVertexBuffer.h  Geometry.h  GeometryUtils.cpp  GeometryUtils.h  IndexBuffer.cpp  IndexBuffer.h  ManualMesh.cpp  ManualMesh.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  (+45 more)
src/dawn/resource/: Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  TextResource.cpp  TextResource.h
src/dawn/scene/: BulletDynamics.h  CLinearMotion.h  CSceneNode.cpp  CSceneNode.h  CTransform.cpp  CTransform.h  Camera.cpp  (+42 more)
src/examples/: CMakeLists.txt  Main.cpp
src/lua_shooter/: CMakeLists.txt  Main.cpp
src/mesh-viewer/: CMakeLists.txt  Main.cpp
src/renderer-test/: CMakeLists.txt  Main.cpp
src/sandbox/: CMakeLists.txt  Main.cpp  SandboxState.cpp  SandboxState.h
src/shooter/: CMakeLists.txt  CProjectile.cpp  CProjectile.h  CShipEngines.cpp  CShipEngines.h  CWeapon.cpp  CWeapon.h  Main.cpp  Projectile.cpp  Projectile.h  Ship.cpp  Ship.h  ShipCameraController.cpp  ShipCameraController.h  ShipEngines.cpp  ShipEngines.h  ShipFlightComputer.cpp  ShipFlightComputer.h  ShooterGameMode.cpp  ShooterGameMode.h
src/tools/: CMakeLists.txt
src/viewer/: CMakeLists.txt  Main.cpp
test/dawn/: CMakeLists.txt  Testing.h
(+455 files in other folders)
