# Dawn Engine
# Written by David Avedissian (c) 2012-2019 (git@dga.me.uk)

message("========== ENGINE ==========")
add_subdirectory(dawn)

message("========== EXAMPLES ==========")
add_subdirectory(examples)

message("========== SANDBOX ==========")
add_subdirectory(sandbox)

message("========== SHOOTER ==========")
add_subdirectory(shooter)

message("========== VIEWER ==========")
add_subdirectory(viewer)

